--- a/GrillaUVAndroid/res/layout/activity_main.xml
+++ b/GrillaUVAndroid/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-            <TextView android:id="@+id/TextView21" />
+
 
             <TextView
                 android:id="@+id/TextView22"
@@ -72,15 +72,7 @@
         android:layout_alignRight="@+id/tableLayout1"
         android:layout_marginBottom="78dp"
         android:layout_marginRight="17dp"
-        android:text="@string/strBoton" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="55dp"
-        android:text="TextView" />
+        android:text="@string/strBoton" 
+        android:onClick="obtenerDatos"/>
 
 </RelativeLayout>
