--- a/GrillaUVAndroid/res/layout/activity_main.xml
+++ b/GrillaUVAndroid/res/layout/activity_main.xml
@@ -8,71 +8,74 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TableLayout
-        android:id="@+id/tableLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/button1"
-        android:shrinkColumns="*"
-        android:stretchColumns="*" >
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
 
-        <TableRow
-            android:id="@+id/tableRow1"
+        <TableLayout
+            android:id="@+id/tableLayout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal" >
+            android:shrinkColumns="*"
+            android:stretchColumns="*" >
 
-            <TextView
-                android:id="@+id/textView11"
+            <TableRow
+                android:id="@+id/tableRow1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_span="6"
-                android:gravity="center"
-                android:text="@string/strTitle"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </TableRow>
+                android:gravity="center_horizontal" >
 
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_span="6"
+                    android:gravity="center"
+                    android:text="@string/strTitle"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </TableRow>
 
+            <TableRow
+                android:id="@+id/tableRow2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
 
+                <TextView
+                    android:id="@+id/TextView22"
+                    android:gravity="center"
+                    android:text="@string/strID"
+                    android:textStyle="bold"
+                    android:typeface="serif" />
 
-            <TextView
-                android:id="@+id/TextView22"
-                android:gravity="center"
-                android:text="@string/strID"
-                android:textStyle="bold"
-                android:typeface="serif" />
+                <TextView
+                    android:id="@+id/TextView23"
+                    android:gravity="center"
+                    android:text="@string/strName"
+                    android:textStyle="bold"
+                    android:typeface="serif" />
 
-            <TextView
-                android:id="@+id/TextView23"
-                android:gravity="center"
-                android:text="@string/strName"
-                android:textStyle="bold"
-                android:typeface="serif" />
-
-            <TextView
-                android:id="@+id/TextView24"
-                android:gravity="center"
-                android:text="@string/strLastName"
-                android:textStyle="bold"
-                android:typeface="serif" />
-
-        </TableRow>
-    </TableLayout>
+                <TextView
+                    android:id="@+id/TextView24"
+                    android:gravity="center"
+                    android:text="@string/strLastName"
+                    android:textStyle="bold"
+                    android:typeface="serif" />
+            </TableRow>
+        </TableLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/tableLayout1"
-        android:layout_marginBottom="78dp"
-        android:layout_marginRight="17dp"
-        android:text="@string/strBoton" 
-        android:onClick="obtenerDatos"/>
+        android:layout_alignRight="@+id/scrollView1"
+        android:layout_marginBottom="30dp"
+        android:onClick="obtenerDatos"
+        android:text="@string/strBoton" />
 
 </RelativeLayout>
